tests/this/this.exp
Error ---------------------------------------------------------------------------------------------------- This.js:29:15

Cannot get `this.x` because property `x` is missing in global object [1]. [prop-missing]

   This.js:29:15
   29|   return this.x
                     ^

References:
   This.js:29:10
   29|   return this.x
                ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- This.js:29:10

Cannot return `this.x` because string [1] is incompatible with number [2]. [incompatible-return]

   This.js:29:10
   29|   return this.x
                ^^^^^^

References:
   This.js:34:24
   34| var f1_3 = f1.bind({x: ""})();           // error, string -> number
                              ^^ [1]
   This.js:28:17
   28| function f1() : number {
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- This.js:33:21

Cannot assign `f1.bind(...)()` to `f1_2` because number [1] is incompatible with string [2]. [incompatible-type]

   This.js:33:21
   33| var f1_2 : string = f1.bind({x: 0})();   // error, number -> string
                           ^^^^^^^^^^^^^^^^^

References:
   This.js:28:17
   28| function f1() : number {
                       ^^^^^^ [1]
   This.js:33:12
   33| var f1_2 : string = f1.bind({x: 0})();   // error, number -> string
                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- This.js:41:15

Cannot get `this.x` because property `x` is missing in global object [1]. [prop-missing]

   This.js:41:15
   41|   return this.x
                     ^

References:
   This.js:41:10
   41|   return this.x
                ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- This.js:48:34

Cannot get `this.x` because property `x` is missing in global object [1]. [prop-missing]

   This.js:48:34
   48|     var a2 = () => { return this.x };
                                        ^

References:
   This.js:48:29
   48|     var a2 = () => { return this.x };
                                   ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- This.js:49:12

Cannot return `a2()` because string [1] is incompatible with number [2]. [incompatible-return]

   This.js:49:12
   49|     return a2()
                  ^^^^

References:
   This.js:54:24
   54| var f2_3 = f2.bind({x: ""})();           // error, string -> number
                              ^^ [1]
   This.js:47:17
   47| function f2() : number {
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- This.js:53:21

Cannot assign `f2.bind(...)()` to `f2_2` because number [1] is incompatible with string [2]. [incompatible-type]

   This.js:53:21
   53| var f2_2 : string = f2.bind({x: 0})();   // error, number -> string
                           ^^^^^^^^^^^^^^^^^

References:
   This.js:47:17
   47| function f2() : number {
                       ^^^^^^ [1]
   This.js:53:12
   53| var f2_2 : string = f2.bind({x: 0})();   // error, number -> string
                  ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- This.js:58:2

Cannot cast `this` to undefined because global object [1] is incompatible with undefined [2]. [incompatible-cast]

   This.js:58:2
   58| (this: void);
        ^^^^ [1]

References:
   This.js:58:8
   58| (this: void);
              ^^^^ [2]


Error --------------------------------------------------------------------------------------------------- arrows.js:5:18

Cannot return `this` because `this` [1] cannot escape from its class [1]. [escaped-generic]

   arrows.js:5:18
   5|   bar() { return this; } // return type is C
                       ^^^^

References:
   arrows.js:1:7
   1| class C {
            ^ [1]


Error --------------------------------------------------------------------------------------------------- arrows.js:16:2

Cannot cast `j` to `D` because `C` [1] is incompatible with `D` [2]. [incompatible-cast]

   arrows.js:16:2
   16| (j: D); // error, since return type of bar is C, not the type of `this`
        ^

References:
   arrows.js:1:7
    1| class C {
             ^ [1]
   arrows.js:16:5
   16| (j: D); // error, since return type of bar is C, not the type of `this`
           ^ [2]


Error -------------------------------------------------------------------------------------------------- arrows.js:24:17

Cannot call `super.foo` with empty string bound to `x` because string [1] is incompatible with number [2].
[incompatible-call]

   arrows.js:24:17
   24|       super.foo(""); // find super method, error due to incorrect arg
                       ^^ [1]

References:
   arrows.js:19:10
   19|   foo(x: number) { }
                ^^^^^^ [2]



Found 11 errors
